# keyboard_simulator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CLI.md  README_PRO.md  config.json  keyboard_simulator.py  keyboard_simulator_gui.py  keyboard_simulator_pro.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
src/keyboard_simulator/: __init__.py  cli.py  config.py  encoding.py  logging_config.py  simulator.py  tasks.py
src/keyboard_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/keyboard_simulator/backends/: base.py  interception.py  sendinput.py
tests/: test_config.py  test_encoding.py  test_simulator.py  test_tasks.py
